# kmp-convex

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  detekt.yaml  gradle.properties  settings.gradle.kts  uniffi.toml
.github/workflows/: ci.yaml  release.yaml  snapshot.yaml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kmp-convex-bindings/: Cargo.toml  build.gradle.kts
kmp-convex-core/: build.gradle.kts
kmp-convex-core/src/commonMain/kotlin/com/kansson/kmp/convex/core/: AnyJson.kt  ConvexClient.kt  ConvexDsl.kt  ConvexException.kt  ConvexFunction.kt  ConvexResponse.kt  Exception.kt
kmp-convex-core/src/commonMain/kotlin/com/kansson/kmp/convex/core/type/: ByteArray.kt  Long.kt  Nullable.kt
kmp-convex-plugin/: build.gradle.kts
kmp-convex-plugin/src/main/kotlin/com/kansson/kmp/convex/plugin/: CodeGenerator.kt  ConvexExtension.kt  ConvexFunction.kt  ConvexPlugin.kt  GenerateConvexSourcesTask.kt  RemoteData.kt
kmp-convex-uniffi/: build.gradle.kts
src/: convex.udl  lib.rs
