[package]
name = "kmp-convex"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.15.0"
anyhow = "1.0.98"
async-once-cell = "0.5.4"
convex = "0.9.0"
futures = "0.3.31"
log = "0.4.27"
parking_lot = "0.12.4"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
uniffi = "0.29.2"

[dev-dependencies]
maplit = { version = "1" }

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "convex"
